$Id: History,v 1.8 1999-04-28 12:30:36 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 28, 1999 H.Kurashige (track-01-00-05b)
-  Protect proton mass against glanular libraly for G4Mars5Gev...(Makoto)
-  Fixed error messages in G4ParticleChange::CheckIt (Hisaya)
-  Remove "include/G4VProcess.hh" from G4Step.cc (Hisaya)

Apr 13, 1999 H.Kurashige (track-01-00-04)
- Code polishing according to the messages by CodeWizard 
- Added new virtual method of G4bool CheckIt(const G4Track&) in G4VParticleChange

Feb 17, 1999 H.Kurashige (track-01-00-03)
-  Removed G4Step::ShowStep() (Takashi)
-  Fixed bugs in G4ParticleChange.icc (Hisaya)

Feb 9, 1999 H.Kurashige (track-01-00-02)
-  Modified G4TrackFastVector (Hisaya)
-  Modified G4ParticleChange::CheckIt (Hisaya)

Feb 6, 1999 H.Kurashige (track-01-00-01)
-  Added Get/SetMomentumDirectionChange in G4ParticleChange (Hisaya)
-  Removed using G4ParticleMomentum (Hisaya)

December 15,  1998 H.Kurashige (track-00-04-05)
- G4ParticleChange::CheckIt is activated in VERBOSE mode (Hisaya) 

December 12, 1998 H.Kurashige (track-00-04-04)
- Fixed bugs in G4Mars5GeVMechanism (Hisaya) 
- Added SwOnAllEB/SwOffAllEB in G4ParticleChange (Hisaya)