@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ParticleChange.cc,v 1.5 1999-04-27 01:15:57 kurasige Exp $
+// $Id: G4ParticleChange.cc,v 1.6 1999-05-06 11:42:54 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -36,7 +36,7 @@ G4ParticleChange::G4ParticleChange():G4VParticleChange(false)
 {
 #ifdef G4VERBOSE
   if (verboseLevel>2) {
-    G4cerr << "G4ParticleChange::G4ParticleChange() " << endl;
+    G4cout << "G4ParticleChange::G4ParticleChange() " << endl;
   }
 #endif
 }
@@ -45,7 +45,7 @@ G4ParticleChange::G4ParticleChange(G4bool useEB):G4VParticleChange(useEB)
 {
 #ifdef G4VERBOSE
   if (verboseLevel>2) {
-    G4cerr << "G4ParticleChange::G4ParticleChange() " << endl;
+    G4cout << "G4ParticleChange::G4ParticleChange() " << endl;
   }
 #endif
 }
@@ -54,7 +54,7 @@ G4ParticleChange::~G4ParticleChange()
 {
 #ifdef G4VERBOSE
   if (verboseLevel>2) {
-    G4cerr << "G4ParticleChange::~G4ParticleChange() " << endl;
+    G4cout << "G4ParticleChange::~G4ParticleChange() " << endl;
   }
 #endif
 }
@@ -63,7 +63,7 @@ G4ParticleChange::~G4ParticleChange()
 G4ParticleChange::G4ParticleChange(const G4ParticleChange &right): G4VParticleChange(right)
 {
    if (verboseLevel>1) {
-    G4cerr << "G4ParticleChange::  copy constructor is called " << endl;
+    G4cout << "G4ParticleChange::  copy constructor is called " << endl;
    }
    theMomentumDirectionChange = right.theMomentumDirectionChange;
    thePolarizationChange = right.thePolarizationChange;
@@ -77,7 +77,7 @@ G4ParticleChange::G4ParticleChange(const G4ParticleChange &right): G4VParticleCh
 G4ParticleChange & G4ParticleChange::operator=(const G4ParticleChange &right)
 {
    if (verboseLevel>1) {
-    G4cerr << "G4ParticleChange:: assignment operator is called " << endl;
+    G4cout << "G4ParticleChange:: assignment operator is called " << endl;
    }
    if (this != &right)
    {
@@ -389,45 +389,85 @@ void G4ParticleChange::DumpInfo() const
 
 G4bool G4ParticleChange::CheckIt(const G4Track& aTrack)
 {
-  G4bool    itsOK = true;
-//  if (theEnergyChange > aTrack.GetKineticEnergy()) {
-//    G4cout << " !!! the energy becomes larger than the initial energy !!!"
-//         << " :  " << (theEnergyChange -aTrack.GetKineticEnergy())/MeV
-//         << "MeV " <<endl;
-//    itsOK = false;
-//  }
-  if ( (theEnergyChange >0.) && 
-        ( abs(theMomentumDirectionChange.mag2()-1.0) > perMillion ) ){
-    G4cout << "  G4ParticleChange::CheckIt !!! the Momentum Change is not unit vector !!!!"
-         << " :  " << theMomentumDirectionChange.mag()
-         << endl;
-    itsOK = false;
+  G4bool    exitWithError = false;
+  G4double  accuracy;
+
+  // check     
+
+  // MomentumDirection should be unit vector
+  G4bool itsOKforMomentum = true;  
+  if ( theEnergyChange >0.) {
+    accuracy = abs(theMomentumDirectionChange.mag2()-1.0);
+    if (accuracy > accuracyForWarning) {
+      G4cout << "  G4ParticleChange::CheckIt  : ";
+      G4cout << "the Momentum Change is not unit vector !!" << endl;
+      G4cout << "  Difference:  " << accuracy << endl;
+      itsOKforMomentum = false;
+      if (accuracy > accuracyForException) exitWithError = true;
+    }
   }
-  if (theTimeChange - aTrack.GetGlobalTime() < -1.0*nanosecond*perMillion) {
-    G4cout << "  G4ParticleChange::CheckIt !!! the global time goes back  !!!"
-         << " :  " << aTrack.GetGlobalTime()/ns
-         << " -> " << theTimeChange/ns
-         << "[ns] " <<endl;
-    itsOK = false;
+
+  // Both global and proper time should not go back
+  G4bool itsOKforGlobalTime = true;  
+  accuracy = (aTrack.GetGlobalTime()- theTimeChange)/ns;
+  if (accuracy > accuracyForWarning) {
+    G4cout << "  G4ParticleChange::CheckIt    : ";
+    G4cout << "the global time goes back  !!" << endl;
+    G4cout << "  Difference:  " << accuracy  << "[ns] " <<endl;
+    itsOKforGlobalTime = false;
+    if (accuracy > accuracyForException) exitWithError = true;
   }
-  if (theProperTimeChange - aTrack.GetProperTime() < -1.0*nanosecond*perMillion ) {
-    G4cout << "  G4ParticleChange::CheckIt !!! the proper time goes back  !!!"
-         << " :  " << aTrack.GetProperTime()/ns
-         << " -> " << theProperTimeChange/ns
-         << "[ns] " <<endl;
-    itsOK = false;
+
+  G4bool itsOKforProperTime = true;
+  accuracy = (aTrack.GetProperTime() - theProperTimeChange )/ns;
+  if (accuracy > accuracyForWarning) {
+    G4cout << "  G4ParticleChange::CheckIt    : ";
+    G4cout << "the proper time goes back  !!" << endl;
+    G4cout << "  Difference:  " << accuracy  << "[ns] " <<endl;
+    itsOKforProperTime = false;
+    if (accuracy > accuracyForException) exitWithError = true;
   }
+
+  // Kinetic Energy should not be negative
+  G4bool itsOKforEnergy = true;
+  accuracy = -1.0*theEnergyChange/MeV;
+  if (accuracy > accuracyForWarning) {
+    G4cout << "  G4ParticleChange::CheckIt    : ";
+    G4cout << "the kinetic energy is negative  !!" << endl;
+    G4cout << "  Difference:  " << accuracy  << "[MeV] " <<endl;
+    itsOKforEnergy = false;
+    if (accuracy > accuracyForException) exitWithError = true;
+  }
+
+  G4bool itsOK = itsOKforMomentum && itsOKforEnergy && itsOKforProperTime && itsOKforGlobalTime;
+  // dump out information of this particle change
   if (!itsOK) { 
     G4cout << " G4ParticleChange::CheckIt " <<endl;
     G4cout << " pointer : " << this <<endl ;
     DumpInfo();
-    G4Exception("G4ParticleChange::CheckIt");
   }
+
+  // Exit with error
+  if (exitWithError) G4Exception("G4ParticleChange::CheckIt");
+
+  //correction
+  if (!itsOKforMomentum) {
+    G4double vmag = theMomentumDirectionChange.mag();
+    theMomentumDirectionChange = (1./vmag)*theMomentumDirectionChange;
+  }
+  if (!itsOKforGlobalTime) {
+    theTimeChange = aTrack.GetGlobalTime();
+  }
+  if (!itsOKforProperTime) {
+    theProperTimeChange = aTrack.GetProperTime();
+  }
+  if (!itsOKforEnergy) {
+    theEnergyChange = 0.0;
+  }
+
+  itsOK = (itsOK) && G4VParticleChange::CheckIt(aTrack);
   return itsOK;
 }
-
-
-
 
 
 
