@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ParticleChangeForLoss.cc,v 1.2 1999-04-13 09:44:30 kurasige Exp $
+// $Id: G4ParticleChangeForLoss.cc,v 1.3 1999-05-06 11:42:56 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -31,7 +31,7 @@ G4ParticleChangeForLoss::G4ParticleChangeForLoss():G4VParticleChange()
   debugFlag = false;
 #ifdef G4VERBOSE
   if (verboseLevel>2) {
-    G4cerr << "G4ParticleChangeForLoss::G4ParticleChangeForLoss() " << endl;
+    G4cout << "G4ParticleChangeForLoss::G4ParticleChangeForLoss() " << endl;
   }
 #endif
 }
@@ -40,7 +40,7 @@ G4ParticleChangeForLoss::~G4ParticleChangeForLoss()
 {
 #ifdef G4VERBOSE
   if (verboseLevel>2) {
-    G4cerr << "G4ParticleChangeForLoss::~G4ParticleChangeForLoss() " << endl;
+    G4cout << "G4ParticleChangeForLoss::~G4ParticleChangeForLoss() " << endl;
   }
 #endif
 }
@@ -49,7 +49,7 @@ G4ParticleChangeForLoss::~G4ParticleChangeForLoss()
 G4ParticleChangeForLoss::G4ParticleChangeForLoss(const G4ParticleChangeForLoss &right): G4VParticleChange(right)
 {
    if (verboseLevel>1) {
-    G4cerr << "G4ParticleChangeForLoss::  copy constructor is called " << endl;
+    G4cout << "G4ParticleChangeForLoss::  copy constructor is called " << endl;
    }
    theEnergyChange = right.theEnergyChange;
 }
@@ -58,7 +58,7 @@ G4ParticleChangeForLoss::G4ParticleChangeForLoss(const G4ParticleChangeForLoss &
 G4ParticleChangeForLoss & G4ParticleChangeForLoss::operator=(const G4ParticleChangeForLoss &right)
 {
    if (verboseLevel>1) {
-    G4cerr << "G4ParticleChangeForLoss:: assignment operator is called " << endl;
+    G4cout << "G4ParticleChangeForLoss:: assignment operator is called " << endl;
    }
    if (this != &right)
    {
@@ -147,19 +147,44 @@ void G4ParticleChangeForLoss::DumpInfo() const
 G4bool G4ParticleChangeForLoss::CheckIt(const G4Track& aTrack)
 {
   G4bool    itsOK = true;
-  if (theEnergyChange > aTrack.GetKineticEnergy()) {
-    G4cout << " !!! the energy becomes larger than the initial energy !!!"
-         << " :  " << (theEnergyChange -aTrack.GetKineticEnergy())/MeV
-         << "MeV " <<endl;
+  G4bool    exitWithError = false;
+
+  G4double  accuracy;
+
+  // Energy should not be lager than initial value
+  accuracy = ( theEnergyChange - aTrack.GetKineticEnergy())/MeV;
+  if (accuracy > accuracyForWarning) {
+    G4cout << "  G4ParticleChangeForLoss::CheckIt    : ";
+    G4cout << "the energy becoes larger than the initial value !!" << endl;
+    G4cout << "  Difference:  " << accuracy  << "[MeV] " <<endl;
     itsOK = false;
+    if (accuracy > accuracyForException) exitWithError = true;
   }
+
+  // dump out information of this particle change
   if (!itsOK) { 
-    G4cout << " G4ParticleChange::CheckIt " <<endl;
+    G4cout << " G4ParticleChangeForLoss::CheckIt " <<endl;
     G4cout << " pointer : " << this <<endl ;
     DumpInfo();
   }
+
+  // Exit with error
+  if (exitWithError) G4Exception("G4ParticleChangeForLoss::CheckIt");
+
+  //correction
+  if (!itsOK) {
+    theEnergyChange = aTrack.GetKineticEnergy();
+  }
+
+  itsOK = (itsOK) && G4VParticleChange::CheckIt(aTrack);
   return itsOK;
 }
+
+
+
+
+
+
 
 
 
